# sphinx-meltano

./: .gitignore  README.md  pyproject.toml
samples/docs/: .gitignore
samples/docs/source/: conf.py  index.rst
samples/meltano/: meltano.yml
src/sphinx_meltano/: __init__.py  directives.py  extension.py  settings.py
src/sphinx_meltano/meltano/: builder.py  details.py
src/sphinx_meltano/templates/: plugin.macros.j2  plugin.rst
